# SOLID-design-patterns-improved

./: CMakeLists.txt  README.md  log.txt  main.cpp  npcs.txt
include/: battle_visitor.hpp  bear.hpp  console_observer.hpp  desman.hpp  dungeon.hpp  factory.hpp  file_observer.hpp  heron.hpp  npc.hpp  observer.hpp  visitor.hpp
src/: battle_visitor.cpp  bear.cpp  console_observer.cpp  desman.cpp  dungeon.cpp  factory.cpp  file_observer.cpp  heron.cpp  npc.cpp  visitor.cpp
tests/: tests.cpp
